#27 - Fixed layout bug

--- a/src/electron/app/css/page_bookmarks.css
+++ b/src/electron/app/css/page_bookmarks.css
@@ -31,6 +31,7 @@
     font-weight: 400;
     line-height: 40px;
     top: 0px;
+    right: 12px;
 }
 
 #bookmark-list h3 {
